--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Zenitha"]
 	path = Zenitha
-	url = https://github.com/26F-Studio/Zenitha
+	url = https://github.com/SweetSea-ButImNotSweet/Zenitha
